chain link submission

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,21 @@
 
 # ## If you want to verify contracts on etherescan
 # export ETHERSCAN_TOKEN='asdfadfasdfsf'
+
+# # The system uses jwt for user authentication
+# # To learn about jwt go to this link: https://jwt.io/introduction
+# # Users in System JWT login tokens:
+# export ORG_TOKEN='somejwttokentologin12323123'
+# export USER1_TOKEN='somejwttokentologin12323123'
+# export USER2_TOKEN='somejwttokentologin12323123'
+# export USER3_TOKEN='somejwttokentologin12323123'
+# export USER4_TOKEN='somejwttokentologin12323123'
+
+
+# # Users in System should have a account address to make transactions
+# # Users in System account addresses
+# export ORG_ADDRESS='someaccountaddress112323'
+# export USER1_ADDRESS='someaccountaddress112323'
+# export USER2_ADDRESS='someaccountaddress112323'
+# export USER3_ADDRESS='someaccountaddress112323'
+# export USER4_ADDRESS='someaccountaddress112323'
